--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ccsnext",
+  "name": "ma3",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
@@ -8,30 +8,35 @@
     "@babel/preset-env": "^7.1.0",
     "babel-loader": "^8.0.4",
     "css-loader": "^1.0.0",
-    "cssnano": "^4.1.5",
     "eslint": "^5.8.0",
-    "eslint-config-devine": "^2.0.0",
+    "eslint-config-devine": "^2.0.1",
     "file-loader": "^2.0.0",
+    "fs-extra": "^7.0.1",
+    "glob": "^7.1.3",
+    "html-critical-webpack-plugin": "^2.1.0",
     "html-srcsets-loader": "^0.5.1",
     "html-webpack-plugin": "^3.2.0",
+    "imagemin": "^6.0.0",
+    "imagemin-pngquant": "^6.0.0",
     "mini-css-extract-plugin": "^0.4.4",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "postcss-import": "^12.0.0",
+    "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
-    "postcss-preset-env": "^6.1.1",
+    "postcss-preset-env": "^6.2.0",
+    "postcss-will-change": "^3.0.0",
     "resolve-url-loader": "^3.0.0",
+    "sharp": "^0.21.0",
     "style-loader": "^0.23.1",
     "stylelint-config-devine": "^2.0.2",
     "url-loader": "^1.1.2",
-    "webpack": "^4.21.0",
+    "webpack": "^4.22.0",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.9"
+    "webpack-dev-server": "^3.1.10"
   },
   "scripts": {
     "dev": "webpack-dev-server --open --mode development",
-    "prod": "yarn clean && yarn copydist && webpack --mode production",
-    "copydist": "rsync -a --exclude=*.css --exclude=*.js ./src/ ./dist",
-    "clean": "rm -rf ./dist"
+    "prod": "rm -rf dist && webpack --mode production",
+    "images": "node ./scripts/images.js"
   },
   "browserslist": [
     "last 2 versions",
