--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
   },
   "scripts": {
     "dev": "webpack-dev-server --open --mode development",
-    "prod": "rm -rf dist && webpack --mode production",
-    "images": "node ./scripts/images.js"
+    "prod": "yarn clean && yarn copydist && webpack --mode production",
+    "copydist": "rsync -a --exclude=*.css --exclude=*.js ./src/ ./dist",
+    "clean": "rm -rf ./dist",
+    "images": "node scripts/images.js"
   },
   "browserslist": [
     "last 2 versions",
